--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{{url_for('static',filename='css/main.css')}}">
-</head>
-<body>
-    <h1>Hola desde Home</h1>
-</body>    
-</html>
+{% extends 'prueba.html'%}
+{% block content %}
+{% endblock%}
