Haciendo cambios al consumir la api listando datos correctamente

--- a/templates/list-properties.html
+++ b/templates/list-properties.html
@@ -1,26 +1,23 @@
 {% extends 'layout.html' %}
 {% block content %}
 <h1 class="text-center">Propiedades de...</h1>
-{% for property in properties %}
+{% for property in properties%}
 <div class="container">
-    <div class="card" style="width: 18rem;">
+    <div class="card-row">
         <img src="{{url_for('static',filename='assets/airbnb.jpeg')}}" alt="img property">
         <div class="card-body">
             <h5 class="card-title">{{property['title']}}</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item"><span>Type:</span>{{property['type']}}</li>
-            <li class="list-group-item"><span>Address:</span>{{property['address']}}</li>
-            <li class="list-group-item"><span>Rooms:</span>{{property['rooms']}}</li>
-            <li class="list-group-item"><span>Price:</span>{{property['price']}}</li>
-            <li class="list-group-item">Area:{{property['area']}}&nbsp;<span>m/2</span></li>
-            <li class="list-group-item"><span>Price:$</span>{{property['price']}}</li>
+            <li class="list-group-item"><span class="font-weight-bold">Type:</span>{{property['type']}}</li>
+            <li class="list-group-item"><span class="font-weight-bold">Address:</span>{{property['address']}}</li>
+            <li class="list-group-item"><span class="font-weight-bold">Rooms:</span>{{property['rooms']}}</li>
+            <li class="list-group-item"><span class="font-weight-bold">Price:</span>{{property['price']}}</li>
+            <li class="list-group-item"><span class="font-weight-bold">Area:</span>{{property['area']}}&nbsp;<span>m/2</span></li>
         </ul>
         <div class="card-body">
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <a href="/updateproperty" class="btn btn-primary">Actualizar</a>
+            <a href="#" class="btn btn-danger">Eliminar</a>
         </div>
     </div>
 </div>
