--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -11,15 +11,15 @@
             </div>
             <div class="form-group col-md-6">
                 <label>LastName</label>
-                <input type="text" class="form-control" id="name" placeholder="LastName" name="lastname">
+                <input type="text" class="form-control" id="last_name" placeholder="LastName" name="last_name">
             </div>
             <div class="form-group col-md-6">
                 <label>Email</label>
-                <input type="email" class="form-control" id="name" placeholder="Email" name="email">
+                <input type="email" class="form-control" id="email" placeholder="Email" name="email">
             </div>
             <div class="form-group col-md-6">
                 <label>Password</label>
-                <input type="password" class="form-control" id="name" placeholder="Password" name="password">
+                <input type="password" class="form-control" id="password" placeholder="Password" name="password">
             </div>
             <button type="submit" class="btn btn-primary">Sign up</button>
         </div>
