--- a/templates/list-properties.html
+++ b/templates/list-properties.html
@@ -1,10 +1,10 @@
 {% extends 'layout.html' %}
 {% block content %}
 <h1 class="text-center">Propiedades de...</h1>
-{% for property in properties%}
+{% for property in properties %}
 <div class="container">
     <div class="card-row">
-        <img src="{{url_for('static',filename='assets/airbnb.jpeg')}}" alt="img property">
+        <img src="{{url_for('static',filename='assets/casa2.jpg')}}" alt="img property" style="width: 25%;">
         <div class="card-body">
             <h5 class="card-title">{{property['title']}}</h5>
         </div>
@@ -15,9 +15,9 @@
             <li class="list-group-item"><span class="font-weight-bold">Price:</span>{{property['price']}}</li>
             <li class="list-group-item"><span class="font-weight-bold">Area:</span>{{property['area']}}&nbsp;<span>m/2</span></li>
         </ul>
-        <div class="card-body">
-            <a href="/updateproperty" class="btn btn-primary">Actualizar</a>
-            <a href="#" class="btn btn-danger">Eliminar</a>
+        <div class="card-footer">
+            <a href="/editproperty?id={{property['_id']}}" class="btn btn-primary">Actualizar</a>
+            <a href="/deleteproperty?id={{property['_id']}}" class="btn btn-danger">Eliminar</a>
         </div>
     </div>
 </div>
