--- a/templates/update-property.html
+++ b/templates/update-property.html
@@ -2,39 +2,40 @@
 {% block content %}
 <div class="container">
     <h1>Actualiza los datos de tu propiedad</h1>
-    <form method="GET" action="/updateproperty">
+    <form method="POST" action="/updateproperty?id={{pro['_id']}}">
+        <div class="form-group col-md-6">
+            <input type="hidden" class="form-control" id="title" placeholder="Title" name="date" value="{{pro['date']}}">
+        </div>
+        <div class="form-group col-md-6">
+            <input type="hidden" class="form-control" id="image" placeholder="Image" name="image" value="{{pro['image']}}">
+        </div>
+        <div class="form-group col-md-6">
+            <input type="hidden" class="form-control" id="author" placeholder="Author" name="author" value="{{pro['author']}}">
+        </div>
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label>Title</label>
-                <input type="text" class="form-control" id="title" placeholder="Title" name="title" value="">
+                <input type="text" class="form-control" id="title" placeholder="Title" name="title" value="{{pro['title']}}">
             </div>
             <div class="form-group col-md-6">
                 <label>Property type</label>
-                <input type="text" class="form-control" id="type" placeholder="Property type" name="type" value="">
+                <input type="text" class="form-control" id="type" placeholder="Property type" name="type" value="{{pro['type']}}">
             </div>
             <div class="form-group col-md-6">
                 <label>Address</label>
-                <input type="text" class="form-control" id="address" placeholder="Address" name="address" value="">
+                <input type="text" class="form-control" id="address" placeholder="Address" name="address" value="{{pro['address']}}">
             </div>
             <div class="form-group col-md-6">
                 <label>Rooms</label>
-                <input type="text" class="form-control" id="rooms" placeholder="Rooms" name="rooms" value="">
+                <input type="text" class="form-control" id="rooms" placeholder="Rooms" name="rooms" value="{{pro['rooms']}}">
             </div>
             <div class="form-group col-md-6">
                 <label>price</label>
-                <input type="text" class="form-control" id="price" placeholder="Price" name="price"value="">
+                <input type="text" class="form-control" id="price" placeholder="Price" name="price"value="{{pro['price']}}">
             </div>
             <div class="form-group col-md-6">
                 <label>Area</label>
-                <input type="text" class="form-control" id="area" placeholder="Area" name="area" value="">
-            </div>
-            <div class="form-group col-md-6">
-                <label>Image</label>
-                <input type="text" class="form-control" id="image" placeholder="Image" name="image" value="">
-            </div>
-            <div class="form-group col-md-6">
-                <label>Author</label>
-                <input type="text" class="form-control" id="author" placeholder="Author" name="author" value="">
+                <input type="text" class="form-control" id="area" placeholder="Area" name="area" value="{{pro['area']}}">
             </div>
             <button type="submit" class="btn btn-primary btn-block">
                 Updated property</button>
