Agregando select al formulario

--- a/templates/add-property.html
+++ b/templates/add-property.html
@@ -10,7 +10,14 @@
             </div>
             <div class="form-group col-md-6">
                 <label>Property type</label>
-                <input type="text" class="form-control" id="type" placeholder="Property type" name="type">
+                <select class="custom-select" id="inputGroupSelect01" name="type">
+                    <option selected>Property type</option>
+                    <option value="casa">casa</option>
+                    <option value="finca">finca</option>
+                    <option value="habitación">habitación</option>
+                    <option value="condominio">condominio</option>
+                    <option value="apto">Apto</option>
+                  </select>
             </div>
             <div class="form-group col-md-6">
                 <label>Address</label>
