--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
 </head>
 <body class="text-left">
    <!--NAVBAR-->
-   <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">Our AirBnb</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
           <a class="nav-link" href="/signup">Registrate</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">Echa un vistazo</a>
+          <a class="nav-link" href="/listproperties">Echa un vistazo</a>
         </li>
       </ul>
     </div>
