--- a/templates/list-properties.html
+++ b/templates/list-properties.html
@@ -1,25 +1,17 @@
 {% extends 'layout.html' %}
 {% block content %}
-<h1 class="text-center">Propiedades de...</h1>
+<h1 class="text-center">Propiedades Disponibles</h1>
 {% for property in properties %}
 <div class="container">
-    <div class="card-row">
-        <img src="{{url_for('static',filename='assets/casa2.jpg')}}" alt="img property" style="width: 25%;">
+    <div class="card" style="width: 18rem;">
         <div class="card-body">
-            <h5 class="card-title">{{property['title']}}</h5>
-        </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item"><span class="font-weight-bold">Type:</span>{{property['type']}}</li>
-            <li class="list-group-item"><span class="font-weight-bold">Address:</span>{{property['address']}}</li>
-            <li class="list-group-item"><span class="font-weight-bold">Rooms:</span>{{property['rooms']}}</li>
-            <li class="list-group-item"><span class="font-weight-bold">Price:</span>{{property['price']}}</li>
-            <li class="list-group-item"><span class="font-weight-bold">Area:</span>{{property['area']}}&nbsp;<span>m/2</span></li>
-        </ul>
-        <div class="card-footer">
-            <a href="/editproperty?id={{property['_id']}}" class="btn btn-primary">Actualizar</a>
-            <a href="/deleteproperty?id={{property['_id']}}" class="btn btn-danger">Eliminar</a>
+            <img src="{{url_for('static',filename='assets/casa2.jpg')}}" alt="img property" class="card-img-top">
+            <br /><br />
+            <h6 class="card-title"><span class="font-weight-bold">{{property['title']}}</h6>
+            <h6 class="card-title"><span class="font-weight-bold">Price:</span>&nbsp;{{property['price']}}</h6>
         </div>
     </div>
 </div>
+<br />
 {% endfor %}
 {% endblock %}
